// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oidcConfigurator should handle falses 1`] = `
Object {
  "getUserMetadata": true,
  "oidc_config": Object {
    "authority": "auth",
    "automaticSilentRenew": true,
    "client_id": "client",
    "extraQueryParams": Object {
      "audience": "aud",
    },
    "metadataUrl": "auth/.well-known/openid-configuration",
    "post_logout_redirect_uri": "origin/signout-callback.html",
    "redirect_uri": "origin/callback.html",
    "response_type": "id_token token",
    "scope": "openid profile offline_access email",
    "silent_redirect_uri": "origin/renew-callback.html",
  },
  "useCallbackFlag": true,
}
`;

exports[`oidcConfigurator should handle trues 1`] = `
Object {
  "getUserMetadata": true,
  "oidc_config": Object {
    "authority": "auth",
    "automaticSilentRenew": true,
    "client_id": "client",
    "extraQueryParams": Object {
      "audience": "aud",
    },
    "metadataUrl": "auth/.well-known/openid-configuration",
    "post_logout_redirect_uri": "origin/signout-callback.html",
    "redirect_uri": "origin/callback.html",
    "response_type": "id_token token",
    "scope": "openid profile offline_access email",
    "silent_redirect_uri": "origin/renew-callback.html",
  },
  "useCallbackFlag": true,
}
`;

exports[`oidcConfigurator should handle undefined 1`] = `
Object {
  "getUserMetadata": false,
  "oidc_config": Object {
    "authority": "auth",
    "automaticSilentRenew": true,
    "client_id": "client",
    "extraQueryParams": Object {
      "audience": "aud",
    },
    "metadataUrl": "auth/.well-known/openid-configuration",
    "post_logout_redirect_uri": "origin/signout-callback.html",
    "redirect_uri": "origin/callback.html",
    "response_type": "id_token token",
    "scope": "openid profile offline_access email",
    "silent_redirect_uri": "origin/renew-callback.html",
  },
  "useCallbackFlag": true,
}
`;
